Commit from LXDE Translation Project with Pootle by user brother.: 216 of 216 messages translated (0 fuzzy).

--- a/po/sv.po
+++ b/po/sv.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-08-22 22:34+0200\n"
-"PO-Revision-Date: 2012-08-14 23:51+0200\n"
+"PO-Revision-Date: 2012-08-22 22:40+0200\n"
 "Last-Translator: Martin <brother@bsnet.se>\n"
 "Language-Team: Swedish <tp-sv@listor.tp-sv.se>\n"
 "Language: sv\n"
@@ -632,20 +632,19 @@ msgstr "Visa _dolda"
 
 #: ../src/gtk/fm-folder-view.c:151
 msgid "Only for this folder"
-msgstr ""
+msgstr "Endast för denna katalog"
 
 #: ../src/gtk/fm-folder-view.c:152
 msgid "Check to remember sort as folder setting rather than global one"
-msgstr ""
+msgstr "Markera för att spara sorteringen för katalogen istället för globalt"
 
 #: ../src/gtk/fm-folder-view.c:153
-#, fuzzy
 msgid "Mingle files and folders"
-msgstr "Vänligen ange en katalog"
+msgstr "Låt filer och kataloger blandas"
 
 #: ../src/gtk/fm-folder-view.c:154
 msgid "Ignore name case"
-msgstr ""
+msgstr "Ignorera variation med stor och liten bokstav för namn"
 
 #: ../src/gtk/fm-folder-view.c:165
 msgid "By _Name"
