--- a/po/eu.po
+++ b/po/eu.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-08-22 22:34+0200\n"
-"PO-Revision-Date: 2012-08-15 19:07+0200\n"
-"Last-Translator: Asier_Iturralde_Sarasola <asier.iturralde@gmail.com>\n"
+"PO-Revision-Date: 2012-08-22 23:28+0200\n"
+"Last-Translator: Asier <asier.iturralde@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: eu\n"
 "MIME-Version: 1.0\n"
@@ -635,20 +635,20 @@ msgstr "Erakutsi _ezkutukoak"
 
 #: ../src/gtk/fm-folder-view.c:151
 msgid "Only for this folder"
-msgstr ""
+msgstr "Soilik karpeta honentzat"
 
 #: ../src/gtk/fm-folder-view.c:152
 msgid "Check to remember sort as folder setting rather than global one"
 msgstr ""
+"Hautatu karpetarentzako ordenatzeko ezarpena gogoratzeko orokorraren ordez"
 
 #: ../src/gtk/fm-folder-view.c:153
-#, fuzzy
 msgid "Mingle files and folders"
-msgstr "Mesedez hautatu karpeta bat"
+msgstr "Nahastu fitxategiak eta karpetak"
 
 #: ../src/gtk/fm-folder-view.c:154
 msgid "Ignore name case"
-msgstr ""
+msgstr "Ez bereizi maiuskulak eta minuskulak"
 
 #: ../src/gtk/fm-folder-view.c:165
 msgid "By _Name"
