--- a/po/el.po
+++ b/po/el.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: libfm\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-08-22 22:34+0200\n"
-"PO-Revision-Date: 2012-07-09 07:54+0200\n"
+"PO-Revision-Date: 2012-08-22 23:45+0200\n"
 "Last-Translator: George <forfolias@gmail.com>\n"
 "Language: el\n"
 "MIME-Version: 1.0\n"
@@ -46,12 +46,12 @@ msgid ""
 "  <b>%u</b>: Represents a single URI of the file\n"
 "  <b>%U</b>: Represents multiple URIs"
 msgstr ""
-"<b>Αυτοί οι ειδικοί κωδικοί μπορούν να χρησιμοποιηθούν στη γραμμή εντολών:</"
-"b>\n"
-" <b>%f</b>: Αντιπροσωπεύει ένα όνομα αρχείου\n"
-" <b>%F</b>: Αντιπροσωπεύει πολλαπλά ονόματα αρχείων\n"
-" <b>%u</b>: Αντιπροσωπεύει ένα ενιαίο URI του αρχείου\n"
-" <b>%U</b>: Αντιπροσωπεύει πολλαπλά URIs"
+"<b>Αυτοί οι ειδικοί κωδικοί μπορούν να χρησιμοποιηθούν στη γραμμή "
+"εντολών:</b>\n"
+"<b>%f</b>: Αντιπροσωπεύει ένα όνομα αρχείου\n"
+"<b>%F</b>: Αντιπροσωπεύει πολλαπλά ονόματα αρχείων\n"
+"<b>%u</b>: Αντιπροσωπεύει ένα ενιαίο URI του αρχείου\n"
+"<b>%U</b>: Αντιπροσωπεύει πολλαπλά URIs"
 
 #: ../data/ui/app-chooser.glade.h:13
 msgid "Custom Command Line"
@@ -605,94 +605,89 @@ msgstr "Τροποποιήθηκε"
 
 #: ../src/gtk/fm-folder-view.c:121
 msgid "Create _New..."
-msgstr ""
+msgstr "_Δημιουργία..."
 
 #: ../src/gtk/fm-folder-view.c:122
 msgid "Folder"
-msgstr ""
+msgstr "Φακέλου"
 
 #: ../src/gtk/fm-folder-view.c:125
-#, fuzzy
 msgid "Blank File"
-msgstr "Άδειος δίσκος MO"
+msgstr "Κενού αρχείου"
 
 #: ../src/gtk/fm-folder-view.c:126
-#, fuzzy
 msgid "Shortcut"
-msgstr "Συντομεύσεις"
+msgstr "Συντόμευσης"
 
 #: ../src/gtk/fm-folder-view.c:137
 msgid "_Invert Selection"
-msgstr ""
+msgstr "_Αντιστροφή επιλογής"
 
 #: ../src/gtk/fm-folder-view.c:138
 msgid "_Sort Files"
-msgstr ""
+msgstr "_Ταξινόμηση αρχείων"
 
 #: ../src/gtk/fm-folder-view.c:150
 msgid "Show _Hidden"
-msgstr ""
+msgstr "_Εμφάνιση κρυφών αρχείων"
 
 #: ../src/gtk/fm-folder-view.c:151
 msgid "Only for this folder"
-msgstr ""
+msgstr "Μόνο για αυτό το φάκελο"
 
 #: ../src/gtk/fm-folder-view.c:152
 msgid "Check to remember sort as folder setting rather than global one"
 msgstr ""
+"Επιλέξτε για εφαρμογή της ρύθμισης ταξινόμησης μόνο σε αυτό το φάκελο αντί "
+"όλων των φακέλων"
 
 #: ../src/gtk/fm-folder-view.c:153
-#, fuzzy
 msgid "Mingle files and folders"
-msgstr "Παρακαλώ επιλέξτε ένα φάκελο"
+msgstr "Ανάμιξη αρχείων και φάκελων"
 
 #: ../src/gtk/fm-folder-view.c:154
 msgid "Ignore name case"
-msgstr ""
+msgstr "Αγνόηση πεζών-κεφαλαίων στα ονόματα"
 
 #: ../src/gtk/fm-folder-view.c:165
-#, fuzzy
 msgid "By _Name"
-msgstr "Όνομα"
+msgstr "Κατά _όνομα"
 
 #: ../src/gtk/fm-folder-view.c:166
 msgid "By _Modification Time"
-msgstr ""
+msgstr "Κατά _ημερομηνία τροποποίησης"
 
 #: ../src/gtk/fm-folder-view.c:167
-#, fuzzy
 msgid "By _Size"
-msgstr "Μέγεθος"
+msgstr "Κατά _μέγεθος"
 
 #: ../src/gtk/fm-folder-view.c:168
-#, fuzzy
 msgid "By File _Type"
-msgstr "<b>Τύπος αρχείου:</b>"
+msgstr "Κατά _τύπο αρχείου"
 
 #: ../src/gtk/fm-folder-view.c:684
 msgid "Enter a name for the newly created folder:"
-msgstr ""
+msgstr "Εισάγετε ένα όνομα για το νέο φάκελο:"
 
 #: ../src/gtk/fm-folder-view.c:686
 msgid "Enter a name for the newly created file:"
-msgstr ""
+msgstr "Εισάγετε ένα όνομα για το νέο αρχείο:"
 
 #: ../src/gtk/fm-folder-view.c:687
 msgid "Create New..."
-msgstr ""
+msgstr "Δημιουργία νέου..."
 
 #: ../src/gtk/fm-folder-view.c:687
-#, fuzzy
 msgid "New"
-msgstr "Δίκτυο"
+msgstr "Νέο"
 
 #: ../src/gtk/fm-folder-view.c:779
 msgid "Error, lxshortcut not installed"
-msgstr ""
+msgstr "Σφάλμα, το lxshortcut δεν είναι εγκατεστημένο"
 
 #: ../src/gtk/fm-folder-view.c:784
 msgid "Failed to start lxshortcut"
-msgstr ""
+msgstr "Αποτυχία εκκίνησης του lxshortcut"
 
 #: ../src/gtk/fm-app-menu-view.c:162
 msgid "Installed Applications"
