--- a/po/uk.po
+++ b/po/uk.po
@@ -7,15 +7,15 @@ msgstr ""
 "Project-Id-Version: libfm\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-08-22 22:34+0200\n"
-"PO-Revision-Date: 2012-08-23 00:42+0300\n"
+"PO-Revision-Date: 2012-08-23 01:18+0200\n"
 "Last-Translator: LStranger <andrej@rep.kiev.ua>\n"
 "Language-Team: Ukrainian <translation@linux.org.ua>\n"
 "Language: uk\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
-"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%"
+"10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 "X-Generator: Pootle 2.0.5\n"
 "X-Poedit-Country: Ukraine\n"
 "X-Poedit-Language: Ukrainian\n"
@@ -609,7 +609,7 @@ msgstr "Змінено"
 
 #: ../src/gtk/fm-folder-view.c:121
 msgid "Create _New..."
-msgstr "Створити _тут..."
+msgstr "С_творити ..."
 
 #: ../src/gtk/fm-folder-view.c:122
 msgid "Folder"
@@ -621,7 +621,7 @@ msgstr "Порожній файл"
 
 #: ../src/gtk/fm-folder-view.c:126
 msgid "Shortcut"
-msgstr "Ярлик"
+msgstr "Посилання на програму"
 
 #: ../src/gtk/fm-folder-view.c:137
 msgid "_Invert Selection"
@@ -641,7 +641,7 @@ msgstr "Лише для цієї теки"
 
 #: ../src/gtk/fm-folder-view.c:152
 msgid "Check to remember sort as folder setting rather than global one"
-msgstr "Якщо відмічено - запам'ятати сортування лише для цієї теки"
+msgstr "Запам'ятати сортування для цієї теки без змін у загальних налаштуваннях"
 
 #: ../src/gtk/fm-folder-view.c:153
 msgid "Mingle files and folders"
