Commit from LXDE Translation Project with Pootle by user Yinghua_Wang.: 216 of 216 messages translated (0 fuzzy).

--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-08-22 22:34+0200\n"
-"PO-Revision-Date: 2012-08-21 12:26+0200\n"
+"PO-Revision-Date: 2012-08-23 04:41+0200\n"
 "Last-Translator: Wylmer <wantinghard@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: zh_CN\n"
@@ -625,20 +625,19 @@ msgstr "显示隐藏文件(_H)"
 
 #: ../src/gtk/fm-folder-view.c:151
 msgid "Only for this folder"
-msgstr ""
+msgstr "只对此文件夹"
 
 #: ../src/gtk/fm-folder-view.c:152
 msgid "Check to remember sort as folder setting rather than global one"
-msgstr ""
+msgstr "选中以记住针对文件夹的排序设置，而非全局设置"
 
 #: ../src/gtk/fm-folder-view.c:153
-#, fuzzy
 msgid "Mingle files and folders"
-msgstr "请选择一个文件夹"
+msgstr "同等对待文件和文件夹"
 
 #: ../src/gtk/fm-folder-view.c:154
 msgid "Ignore name case"
-msgstr ""
+msgstr "忽略名称大小写"
 
 #: ../src/gtk/fm-folder-view.c:165
 msgid "By _Name"
