--- a/po/cs.po
+++ b/po/cs.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: Libfm\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-08-22 22:34+0200\n"
-"PO-Revision-Date: 2012-08-23 14:00+0100\n"
-"Last-Translator: Alois Nešpor <info@aloisnespor.info>\n"
+"PO-Revision-Date: 2012-08-23 14:06+0200\n"
+"Last-Translator: ALIUM <info@aloisnespor.info>\n"
 "Language-Team: Czech <radek@fastlinux.eu>\n"
 "Language: cs\n"
 "MIME-Version: 1.0\n"
@@ -605,7 +605,7 @@ msgstr "Změněno"
 
 #: ../src/gtk/fm-folder-view.c:121
 msgid "Create _New..."
-msgstr "Vytvořit _nový"
+msgstr "Vytvořit _nový..."
 
 #: ../src/gtk/fm-folder-view.c:122
 msgid "Folder"
